W3_services_networking/clusterip.yaml
apiVersion: v1
kind: Service

metadata:
  name: tts-clusterip

spec:
  type: ClusterIP

  selector:
    app: tts

  ports:
    - port: 80
      targetPort: 80
