W3_services_networking/loadbalancer.yaml
apiVersion: v1
kind: Service

metadata:
  name: tts-loadbalancer

spec:
  type: LoadBalancer

  selector:
    app: tts

  ports:
    - port: 80
      targetPort: 80
