W3_services_networking/nodeport.yaml
apiVersion: v1
kind: Service

metadata:
  name: tts-nodeport

spec:
  type: NodePort

  selector:
    app: tts

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
