W3_services_networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: tts-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: tts.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tts-clusterip
                port:
                  number: 80
